Fix header overflow while decreasing screen size

--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ body {
 .header-elements {
     display: grid;
     grid-template-rows: 1fr 2fr;
-    grid-template-columns: 1fr;
-    /* justify-content: center; */
     padding: 0% 4%;    
 
 }
@@ -75,6 +73,7 @@ li a:hover {
     grid-template-columns: auto 3fr 2fr;
     align-items: center;
     gap: 20px;
+    padding-top: 10px;
 }
 
 input {
@@ -96,10 +95,9 @@ input {
 .second-head {
     grid-row: 2;
     display: grid;
-    grid-template-columns: auto 2fr 1.5fr;
-    /* justify-content: space-evenly; */
+    grid-template-columns: auto 2fr auto;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 .second-head .pp {
@@ -117,10 +115,13 @@ input {
 
 .greeting p:last-child {
     font-size: 22px;
+    min-width: 270px;
 }
 
 .buttons {
     justify-self: center;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
 }
 
 button {
@@ -131,6 +132,7 @@ button {
     padding: 10px 30px;
     color: white;
     font-weight: bold;
+    font-size: 0.9rem;
 
 }
 
